# Speak-web

./: CLAUDE.md  GEMINI.md  Makefile  README.md  plan.md  response.md  response2.md  summary.md
backend/: .env.example  .gitignore  dependencies.py  graph.py  ielts_rag.py  main.py  pyproject.toml  requirements.txt  test_graph.py
backend/data/: IELTS.json
backend/endpoints/: __init__.py  chat.py  health.py
backend/schemas/: __init__.py  chat.py
backend/scripts/: build_ielts_index.py
backend/utils/: __init__.py  json_utils.py
docs/: ielts-rag-feature-summary.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatContainer.tsx  ChatMessage.tsx  ConfirmModal.tsx  CorrectionAccordion.tsx  ErrorBanner.tsx  IELTSSuggestions.tsx  LoadingIndicator.tsx  MessageInput.tsx  NewConversationButton.tsx  SummaryModal.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/hooks/: useAudioPlayback.ts  useAudioRecorder.ts  useSSE.ts  useSpeechRecognition.ts
frontend/src/types/: index.ts
openspec/changes/add-backend-stt/: design.md  proposal.md  tasks.md
openspec/changes/add-voice-features/: tasks.md
openspec/changes/guardrail-node/: proposal.md  tasks.md
openspec/changes/ielts-rag-suggestions/: design.md  tasks.md
openspec/changes/speak-chat-app/: design.md  proposal.md  tasks.md
openspec/specs/backend-stt-transcription/: spec.md
openspec/specs/grammar-correction/: spec.md
openspec/specs/guardrail/: spec.md
openspec/specs/ielts-rag/: spec.md
openspec/specs/practice-summary/: spec.md
openspec/specs/voice-input/: spec.md
(+19 files in other folders)
