[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.77.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "environs==14.5.0",
    "fastapi==0.109.0",
    "fastapi-cors==0.0.6",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-anthropic==0.3.3",
    "langchain-core==0.3.83",
    "langgraph==0.2.45",
    "langgraph-checkpoint==2.1.2",
    "langgraph-sdk==0.1.74",
    "langsmith==0.6.7",
    "marshmallow==4.2.1",
    "orjson==3.11.6",
    "ormsgpack==1.12.2",
    "packaging==25.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "starlette==0.35.1",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.0",
    "uvicorn==0.27.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
